RESOLVED FIXED180412
WebDriver: test imported/w3c/webdriver/tests/sessions/new_session/response.py::test_timeouts fails
https://bugs.webkit.org/show_bug.cgi?id=180412
Summary WebDriver: test imported/w3c/webdriver/tests/sessions/new_session/response.py...
Carlos Garcia Campos
Reported 2017-12-05 03:09:33 PST
self = <webdriver.client.Session object at 0x7f13186b1950>, method = 'POST', url = 'session' body = {'capabilities': {'alwaysMatch': {'timeouts': {'implicit': 1000}, 'webkitgtk:browserOptions': {'args': ['--automation'..., '--enable-xss-auditor=false'], 'binary': '/home/cgarcia/src/git/gnome/WebKit/WebKitBuild/Release/bin/MiniBrowser'}}}} def send_command(self, method, url, body=None): """ Send a command to the remote end and validate its success. :param method: HTTP method to use in request. :param uri: "Command part" of the HTTP request URL, e.g. `window/rect`. :param body: Optional body of the HTTP request. :return: `None` if the HTTP response body was empty, otherwise the `value` field returned after parsing the response body as JSON. :raises ValueError: If the response body does not contain a `value` key. :raises error.WebDriverException: If the remote end returns an error. """ response = self.transport.send( method, url, body, encoder=protocol.Encoder, decoder=protocol.Decoder, session=self) if response.status != 200: > raise error.from_response(response) E InvalidArgumentException: invalid argument (400): Invalid alwaysMatch capabilities body = {'capabilities': {'alwaysMatch': {'timeouts': {'implicit': 1000}, 'webkitgtk:browserOptions': {'args': ['--automation'..., '--enable-xss-auditor=false'], 'binary': '/home/cgarcia/src/git/gnome/WebKit/WebKitBuild/Release/bin/MiniBrowser'}}}} method = 'POST' response = <Response status=400 error=<InvalidArgumentException http_status=400>> self = <webdriver.client.Session object at 0x7f13186b1950> url = 'session'
Attachments
Patch (7.38 KB, patch)
2018-01-23 00:37 PST, Carlos Garcia Campos
clopez: review+
Carlos Garcia Campos
Comment 1 2018-01-23 00:37:39 PST
Carlos Garcia Campos
Comment 2 2018-01-23 08:21:54 PST
Radar WebKit Bug Importer
Comment 3 2018-01-23 08:22:24 PST
Note You need to log in before you can comment on or make changes to this bug.