WebDriver: test imported/w3c/webdriver/tests/sessions/new_session/response.py::test_timeouts fails https://bugs.webkit.org/show_bug.cgi?id=180412

Reviewed by Carlos Alberto Lopez Perez.

Source/WebDriver:

Include all missing capabilities in the new session response message.

Fixes: imported/w3c/webdriver/tests/sessions/new_session/response.py::test_resp_capabilites
       imported/w3c/webdriver/tests/sessions/new_session/response.py::test_resp_data
       imported/w3c/webdriver/tests/sessions/new_session/response.py::test_timeouts

* Session.h:
(WebDriver::Session::scriptTimeout const):
(WebDriver::Session::pageLoadTimeout const):
(WebDriver::Session::implicitWaitTimeout const):
* WebDriverService.cpp:
(WebDriver::WebDriverService::newSession):

WebDriverTests:

Remove expectations for imported/w3c/webdriver/tests/sessions/new_session/response.py since all tests are
passing now.

* TestExpectations.json:

Canonical link: https://commits.webkit.org/197813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227413 268f45cc-cd09-0410-ab3c-d52691b4dbfc